--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -13,6 +13,9 @@
     "moduleDetection": "force",
     "noEmit": true,
 
+    "incremental": true,  // Enable incremental builds
+    "jsx": "react-jsx",
+    "types": ["react", "react-dom"],
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
@@ -21,5 +24,28 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["vite.config.ts"]
+  "include": [
+    "vite.config.ts",
+    "src/**/*.{ts,tsx}"
+  ]
 }
+
+
+// {
+//   "compilerOptions": {
+//     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
+//     "target": "ES2022",
+//     "lib": ["ES2022"],
+//     "module": "CommonJS",
+//     "skipLibCheck": true,
+//     "moduleResolution": "node",
+//     "allowImportingTsExtensions": true,
+//     "strict": true,
+//     "noUnusedLocals": true,
+//     "noUnusedParameters": true,
+//     "noFallthroughCasesInSwitch": true,
+//     "noUncheckedSideEffectImports": true,
+//     "noEmit": true
+//   },
+//   "include": ["vite.config.ts"]
+// }
